--- a/styles.css
+++ b/styles.css
@@ -137,43 +137,6 @@ padding-right: 0;
 .youtube{
 border-top:3px solid hsl(348,97%,39%);
 }
-/*.main-heading{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-weight: 700;
-    font-size: 30px;
-    color: var(--header-text);
-}
-.main-card{
-    background-color: var(--bg-card);
-    padding:25px;
-    display: flex;
-    flex-direction:column;
-    border-radius: 5px;
-}
-.main-row-margin{
-    margin-bottom: 25px;
-}
-.main-card-top , .main-card-bottom , .main-card-bottom1{
-display:flex;
-justify-content: center;
-}
-.main-card-top span:first-child{
-    color: var(--subtext);
-    font-weight: 700;
-}
-main-card-bottom span:first-child{
-    font-size: 34px;
-    font-weight: 700;
-    color: var(--header-text);
-    padding-top:25px;
-}
-.main-card-bottom1 span:last-child{
-color:hsl(163,72%,41%);
-font-weight: 700;
-font-size: 12px;
-padding-top: 50px;
-}*/
 .fa-facebook-square {
     color: deepskyblue; }
   
@@ -203,7 +166,7 @@ padding-top: 50px;
       font-size: 12px !important;
       margin-right: 6px; }
 .overview__title {
-  color: var(--text-secondary);
+  color: var(--header-text));
   font-size: 18px;
   margin: 10px 0 24px; }
 
